<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layoutDirection="ltr"
    android:layout_height="wrap_content"
    tools:context=".fragments.ExitGameDialog">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/choose_level_bg"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvExitGame"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:fontFamily="@font/hvdtrial_mikado_ultra"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="@string/exit_game"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/three_level_bg"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvExitGame">

            <TextView
                android:id="@+id/tvTop"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:gravity="center"
                android:scrollHorizontally="true"
                android:focusable="true"
                android:fontFamily="@font/hvdtrial_mikado_medium"
                android:marqueeRepeatLimit="marquee_forever"
                android:singleLine="true"
                android:text="@string/wait_wait_one_more_round_please"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/btnExit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/exit_bg"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tvExit"
                        style="@style/Button.L"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingVertical="16dp"
                        android:text="@string/exit"
                        android:textColor="@color/purple" />

                </LinearLayout>

                <Space
                    android:layout_width="16dp"
                    android:layout_height="16dp" />

                <LinearLayout
                    android:id="@+id/btnStay"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btn_play_bg"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tvStay"
                        style="@style/Button.L"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingVertical="16dp"
                        android:text="@string/stay"
                        android:textColor="@color/white" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>